updated all the co-ordinators name

--- a/index.html
+++ b/index.html
@@ -2991,7 +2991,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Ashwitha</h3>
-                            <p class="team-member-role">Technical Lead</p>
+                            <p class="team-member-role">Publicity Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3004,7 +3004,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Anuj</h3>
-                            <p class="team-member-role">Design Head</p>
+                            <p class="team-member-role">Technical Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3017,7 +3017,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Dheeraj</h3>
-                            <p class="team-member-role">Marketing Lead</p>
+                            <p class="team-member-role">Technical Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3030,7 +3030,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Arun</h3>
-                            <p class="team-member-role">Logistics Manager</p>
+                            <p class="team-member-role">Event Manager</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3043,7 +3043,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Ganesh</h3>
-                            <p class="team-member-role">Content Writer</p>
+                            <p class="team-member-role">Content Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3056,7 +3056,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Srija</h3>
-                            <p class="team-member-role">Sponsorship Head</p>
+                            <p class="team-member-role">Arts & Craft Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3069,7 +3069,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Nandhini</h3>
-                            <p class="team-member-role">Social Media Lead</p>
+                            <p class="team-member-role">Arts & Craft Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3082,7 +3082,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Shruthi</h3>
-                            <p class="team-member-role">Tech Support</p>
+                            <p class="team-member-role">Cultural Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3095,7 +3095,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Manasa</h3>
-                            <p class="team-member-role">Volunteer Manager</p>
+                            <p class="team-member-role">Publicity Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3103,12 +3103,12 @@
                     <!-- Team Member 11 -->
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
-                            <img src="./images/Divya_team11.jpeg"
+                            <img src="./images/Divya_team_11.jpeg"
                                 alt="Divya">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Divya</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Publicity Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3121,7 +3121,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Priya</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Cultural Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3134,7 +3134,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Sathwika</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Hospitality Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3147,7 +3147,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Chandana</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Hospitality Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3160,7 +3160,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Radhika</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Publicity Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3173,7 +3173,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Varsha</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Publicity Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3186,7 +3186,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Aravind</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Publicity Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3199,7 +3199,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Divya</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Publicity Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3225,7 +3225,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Hamikha</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Social Media Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3238,7 +3238,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Soukya Sri</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Registration Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3251,7 +3251,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Ruhit</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Event Manager</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3264,7 +3264,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Jayanth</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Discipline Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3277,7 +3277,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Koushik</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Poster Designing</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3290,7 +3290,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Karthik</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Cultural Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3303,7 +3303,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Sricharan</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Hospitality Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3316,7 +3316,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Lokesh</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Cultural Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3329,7 +3329,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Manikarnika</h3>
-                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-role">Poster Designing</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3354,7 +3354,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Ashwitha</h3>
-                            <p class="team-member-role">Technical Lead</p>
+                            <p class="team-member-role">Publicity Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3366,7 +3366,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Anuj</h3>
-                            <p class="team-member-role">Design Head</p>
+                            <p class="team-member-role">Technical Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3378,7 +3378,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Dheeraj</h3>
-                            <p class="team-member-role">Marketing Lead</p>
+                            <p class="team-member-role">Technical Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3390,7 +3390,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Arun</h3>
-                            <p class="team-member-role">Logistics Manager</p>
+                            <p class="team-member-role">Event Manager</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3402,7 +3402,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Ganesh</h3>
-                            <p class="team-member-role">Content Writer</p>
+                            <p class="team-member-role">Content Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3414,7 +3414,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Srija</h3>
-                            <p class="team-member-role">Sponsorship Head</p>
+                            <p class="team-member-role">Arts & Craft Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3426,7 +3426,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Nandhini</h3>
-                            <p class="team-member-role">Social Media Lead</p>
+                            <p class="team-member-role">Arts & Craft Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3438,7 +3438,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Shruthi</h3>
-                            <p class="team-member-role">Tech Support</p>
+                            <p class="team-member-role">Cultural Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
@@ -3450,7 +3450,7 @@
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Manasa</h3>
-                            <p class="team-member-role">Volunteer Manager</p>
+                            <p class="team-member-role">Publicity Coordinator</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
