--- a/index.html
+++ b/index.html
@@ -2827,19 +2827,11 @@
                         <div class="event-timeline-dot"></div>
                         <div class="event-timeline-card">
                             <span class="event-timeline-day-badge">Day 3</span>
-                            <h2 class="event-timeline-card-title">AI-Powered Applications on AWS</h2>
-                            <h3 class="event-timeline-card-subtitle">Building and deploying AI-driven applications using
-                                AWS services</h3>
+                            <h2 class="event-timeline-card-title">Cultural Day</h2>
+                            <h3 class="event-timeline-card-subtitle">Celebrating Creativity, Diversity, and Teamwork  </h3>
                             <ul class="event-timeline-list">
-                                <li class="event-timeline-list-item">Introduction to AWS Bedrock and foundation models
+                                <li class="event-timeline-list-item">Cultural activities and student performances to celebrate creativity teamwork, and campus sprit
                                 </li>
-                                <li class="event-timeline-list-item">AWS Lambda for serverless backend logic</li>
-                                <li class="event-timeline-list-item">API Gateway for exposing AI services</li>
-                                <li class="event-timeline-list-item">Integrating Bedrock with Lambda and APIs</li>
-                                <li class="event-timeline-list-item">Hosting and accessing AI applications over the
-                                    internet</li>
-                                <li class="event-timeline-list-item">End-to-end AI-powered chatbot architecture</li>
-                                <li class="event-timeline-list-item">Final wrap-up and learning outcomes</li>
                             </ul>
                         </div>
                     </div>
