--- a/index.html
+++ b/index.html
@@ -2673,8 +2673,8 @@
             <div class="about-content">
                 <div class="about-card">
                     <div class="about-icon">🚀</div>
-                    <h3>What is TechVaganza?</h3>
-                    <p>TechVaganza is an intensive 3-day technical event focused on Amazon Web Services (AWS) and cloud
+                    <h3>What is TechVagaanza?</h3>
+                    <p>TechVagaanza is an intensive 3-day technical event focused on Amazon Web Services (AWS) and cloud
                         computing technologies. Designed for students passionate about learning cutting-edge cloud
                         technologies and DevOps practices.</p>
                 </div>
@@ -2695,7 +2695,7 @@
                 </div>
                 <div class="about-description">
                     <h3>Our Mission</h3>
-                    <p>TechVaganza is conducted every year with a singular focus: to provide students with hands-on
+                    <p>TechVaaganza is conducted every year with a singular focus: to provide students with hands-on
                         experience in AWS cloud computing, industry-standard DevOps practices, and real-world cloud
                         architecture. This is a learning-first event where students can expand their technical knowledge
                         and stay ahead in the ever-evolving tech landscape.</p>
@@ -2846,7 +2846,7 @@
             <div class="section-header">
                 <h2 class="section-title">Register Now</h2>
                 <div class="section-divider"></div>
-                <p class="section-subtitle">Secure your spot for TechVaaganza 2025</p>
+                <p class="section-subtitle">Secure your spot for TechVaaganza 2026</p>
             </div>
             <div class="registration-container">
                 <div class="registration-form-container">
@@ -3513,7 +3513,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 TechVaaganza. All rights reserved.</p>
+                <p>&copy; 2026 TechVaaganza. All rights reserved.</p>
                 <p>Organized by Vaagdevi College of Engineering</p>
             </div>
         </div>
