--- a/index.html
+++ b/index.html
@@ -2830,7 +2830,7 @@
                             <h2 class="event-timeline-card-title">Cultural Day</h2>
                             <h3 class="event-timeline-card-subtitle">Celebrating Creativity, Diversity, and Teamwork  </h3>
                             <ul class="event-timeline-list">
-                                <li class="event-timeline-list-item">Cultural activities and student performances to celebrate creativity teamwork, and campus sprit
+                                <li class="event-timeline-list-item">Cultural activities and student performances to celebrate creativity teamwork, and campus spirt
                                 </li>
                             </ul>
                         </div>
