--- a/index.html
+++ b/index.html
@@ -2469,7 +2469,7 @@
                         <!-- Row 1 - Card 1 -->
                         <div class="tech-image-card">
                             <div class="tech-image-wrapper">
-                                <img src="./images/Pricipal_faculty.jpeg" alt="Principal">
+                                <img src="./images/Pricipal_faculty.jpeg" alt="Principal" draggable="false" oncontextmenu="return false">
                             </div>
                             <div class="tech-image-overlay">
                                 <div class="tech-image-name">Dr.K.Prakash</div>
@@ -2480,7 +2480,7 @@
                         <!-- Row 1 - Card 2 -->
                         <div class="tech-image-card">
                             <div class="tech-image-wrapper">
-                                <img src="./images/Vice-Principal_faculty.jpeg" alt="Vice Principal">
+                                <img src="./images/Vice-Principal_faculty.jpeg" alt="Vice Principal" draggable="false" oncontextmenu="return false">
                             </div>
                             <div class="tech-image-overlay">
                                 <div class="tech-image-name">Dr.K.Thirupathi Rao</div>
@@ -2491,7 +2491,7 @@
                         <!-- Row 1 - Card 3 -->
                         <div class="tech-image-card">
                             <div class="tech-image-wrapper">
-                                <img src="./images/Hod_faculty.jpeg" alt="HOD CSE">
+                                <img src="./images/Hod_faculty.jpeg" alt="HOD CSE" draggable="false" oncontextmenu="return false">
                             </div>
                             <div class="tech-image-overlay">
                                 <div class="tech-image-name">Dr.N.Satyavathi</div>
@@ -2502,7 +2502,7 @@
                         <!-- Row 2 - Card 4 -->
                         <div class="tech-image-card">
                             <div class="tech-image-wrapper">
-                                <img src="./images/Aravind_faculty.jpeg" alt="Aravind">
+                                <img src="./images/Aravind_faculty.jpeg" alt="Aravind" draggable="false" oncontextmenu="return false">
                             </div>
                             <div class="tech-image-overlay">
                                 <div class="tech-image-name">CH.Aravind Kumar</div>
@@ -2513,7 +2513,7 @@
                         <!-- Row 2 - Card 5 -->
                         <div class="tech-image-card">
                             <div class="tech-image-wrapper">
-                                <img src="./images/Shekar_faculty.jpeg" alt="Shekar">
+                                <img src="./images/Shekar_faculty.jpeg" alt="Shekar" draggable="false" oncontextmenu="return false">
                             </div>
                             <div class="tech-image-overlay">
                                 <div class="tech-image-name">K.Shekar</div>
@@ -2524,7 +2524,7 @@
                         <!-- Row 2 - Card 6 -->
                         <div class="tech-image-card">
                             <div class="tech-image-wrapper">
-                                <img src="./images/Trainee image.png" alt="Avinash Reddy Thipparthi">
+                                <img src="./images/Trainee image.png" alt="Avinash Reddy Thipparthi" draggable="false" oncontextmenu="return false">
                             </div>
 
                             <div class="tech-image-overlay">
@@ -2972,7 +2972,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Ayesha_team_1.jpeg"
-                                alt="Ayesha">
+                                alt="Ayesha" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Ayesha</h3>
@@ -2985,7 +2985,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Ashwitha_team_2.jpeg"
-                                alt="Ashwitha">
+                                alt="Ashwitha" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Ashwitha</h3>
@@ -2998,7 +2998,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Anuj_team_3.jpeg"
-                                alt="Anuj">
+                                alt="Anuj" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Anuj</h3>
@@ -3011,7 +3011,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Dheeraj_team_4.jpeg"
-                                alt="Dheeraj">
+                                alt="Dheeraj" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Dheeraj</h3>
@@ -3024,7 +3024,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Arun_team_5.jpeg"
-                                alt="Arun">
+                                alt="Arun" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Arun</h3>
@@ -3037,7 +3037,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Ganesh_team_6.jpeg"
-                                alt="Ganesh">
+                                alt="Ganesh" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Ganesh</h3>
@@ -3050,7 +3050,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Srija_team_7.jpeg"
-                                alt="Srija">
+                                alt="Srija" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Srija</h3>
@@ -3063,7 +3063,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Nandhini_team_8.jpeg"
-                                alt="Nandhini">
+                                alt="Nandhini" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Nandhini</h3>
@@ -3076,7 +3076,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Shruthi_team_9.jpeg"
-                                alt="Shruthi">
+                                alt="Shruthi" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Shruthi</h3>
@@ -3089,7 +3089,7 @@
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="./images/Manasa_team_10.jpeg"
-                                alt="Manasa">
+                                alt="Manasa" draggable="false" oncontextmenu="return false">
                         </div>
                         <div class="team-member-info">
                             <h3 class="team-member-name">Manasa</h3>
