--- a/trainer.html
+++ b/trainer.html
@@ -990,7 +990,7 @@
             </div>
             <div class="hero-image">
                 <div class="trainer-photo">
-                    <img src="./images/Trainee image.png" alt="Avinash Reddy Thipparthi - Cloud and DevOps Trainer">
+                    <img src="./images/Trainee image.png" alt="Avinash Reddy Thipparthi - Cloud and DevOps Trainer" draggable="false" oncontextmenu="return false">
                 </div>
             </div>
         </div>
